@@ -1,6 +1,10 @@
 release 1.1.3-ea (2009-09)
 - Fixed issue 336
   https://jersey.dev.java.net/issues/show_bug.cgi?id=336
+  The client API should use the default media type "application/octet-stream"
+  if a default media type cannot be obtained for a request entity of Java type.
+- Fixed issue 336
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=336
   A class that extends of Application or ResourceConfig referenced in the web.xml
   is now instantated as a component.
   If the class has a constructor that takes a single parameter of the
